@@ -51,8 +51,7 @@ CIrrBPCapsuleBody::CIrrBPCapsuleBody(ISceneNode * node,irr::f32 mass, irr::s32 b
    btVector3 LocalInertia;
    m_Shape->calculateLocalInertia(mass, LocalInertia);
    m_RigidBody = new btRigidBody(mass, m_MotionState, m_Shape, LocalInertia);
-
-   m_RigidBody->setUserPointer((void *)(node));
+  
    collisionObj = m_RigidBody;
 
    setAutomaticCCD();
