@@ -51,8 +51,6 @@ CIrrBPCylinderBody::CIrrBPCylinderBody(ISceneNode * node,irr::f32 mass, irr::s32
 
    m_RigidBody = new btRigidBody(mass, m_MotionState, m_Shape, LocalInertia);
 
-   m_RigidBody->setUserPointer((void *)(node));
-   //sm_RigidBody->setActivationState(DISABLE_DEACTIVATION);
    collisionObj = m_RigidBody;
-	setAutomaticCCD();
+   setAutomaticCCD();
 }
